--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
 
       <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
-      <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
+      <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
 
       <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botónContactar">
           CHATEAR EN WHATSAPP
@@ -182,12 +182,11 @@
       MEGA BONUS todos los derechos reservados.
   </footer>
 
-  <!-- Función para disparar el evento Contact cuando el botón es clickeado -->
-  <script type="text/javascript">
-      document.getElementById('botónContactar').addEventListener('click', function() {
-          // Disparar el evento 'Contact' del Pixel de Meta
-          fbq('track', 'Contact');
-          // Redirigir al usuario a la página de contacto o abrir WhatsApp, según corresponda
-          window.location.href = 'https://wa.link/megabonus'; // Reemplaza con tu enlace de WhatsApp
+  <!-- Notificaciones -->
+  <div class="xpo-notification-wrap">
+    <div class="xpo-img-wrap">
+      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Usuario">
+    </div>
+
 ::contentReference[oaicite:0]{index=0}
  
