--- a/index.html
+++ b/index.html
@@ -8,185 +8,188 @@
 
   <!-- Meta Pixel Code -->
   <script>
-    !function(f,b,e,v,n,t,s){
-      if(f.fbq) return; n=f.fbq=function(){n.callMethod ? 
-      n.callMethod.apply(n, arguments) : n.queue.push(arguments)};
+    !function(f,b,e,v,n,t,s) {
+      if(f.fbq) return; n=f.fbq=function() {
+        n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
       if(!f._fbq) f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0';
       n.queue=[]; t=b.createElement(e); t.async=!0;
       t.src=v; s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s);
-    }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-    
-    fbq('init', 'TU_PIXEL_ID'); // Reemplaza 'TU_PIXEL_ID' con tu ID real del Pixel
+      s.parentNode.insertBefore(t,s)
+    }(window, document, 'script', 'https://connect.facebook.net/es_LA/fbevents.js');
+    fbq('init', '635168062745954'); // Reemplaza con tu ID de Pixel
     fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=TU_PIXEL_ID&ev=PageView&noscript=1" />
+      src="https://www.facebook.com/tr?id=635168062745954&ev=PageView&noscript=1" />
   </noscript>
   <!-- End Meta Pixel Code -->
 
-  <!-- Fuente de Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
   <style>
     * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: 'Segoe UI', sans-serif;
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     body {
-        background-color: #ffffff;
-        color: #111b21;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        flex-direction: column;
+      background-color: #ffffff;
+      color: #111b21;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
     }
 
     .container {
-        text-align: center;
-        padding: 20px;
-        max-width: 600px;
-        margin: 20px;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        border-radius: 8px;
+      text-align: center;
+      padding: 20px;
+      max-width: 600px;
+      margin: 20px;
+      background-color: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
     h1 {
-        font-family: 'Montserrat', sans-serif; /* Fuente Montserrat */
-        font-weight: bold;
-        font-size: 2.5em;
-        margin-bottom: 20px;
-        letter-spacing: -2px; /* Menos espacio entre las letras */
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      letter-spacing: -2px;
     }
 
     p {
-        font-size: 1.2em;
-        margin-bottom: 20px;
+      font-size: 1.2em;
+      margin-bottom: 20px;
     }
 
     .whatsapp-logo {
-        width: 50px;
-        margin-bottom: 20px;
+      width: 50px;
+      margin-bottom: 20px;
     }
 
     .cta-button {
-        background-color: #25d366; /* Color de WhatsApp */
-        color: white;
-        padding: 15px 30px;
-        font-size: 1.2em;
-        font-weight: bold;
-        border: none;
-        border-radius: 25px;
-        text-decoration: none;
-        display: inline-block;
-        cursor: pointer;
-        margin-top: 20px;
-        transition: background-color 0.3s ease;
+      background-color: #25d366;
+      color: white;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      font-weight: bold;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      display: inline-block;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
     }
 
     .cta-button:hover {
-        background-color: #128c7e; /* Color más oscuro al pasar el cursor */
+      background-color: #128c7e;
     }
 
     footer {
-        text-align: center;
-        font-size: 13px;
-        color: #999;
-        margin-top: 60px;
-        padding-bottom: 80px;
+      text-align: center;
+      font-size: 13px;
+      color: #999;
+      margin-top: 60px;
+      padding-bottom: 80px;
     }
 
-    /* Estilos para las notificaciones */
     .xpo-notification-wrap {
-        position: fixed;
-        background: #1e1e1e;
-        color: #ffffff;
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-        padding: 10px 14px;
-        display: flex;
-        align-items: center;
-        width: 280px;
-        z-index: 9999;
-        border: 1px solid #333;
-        backdrop-filter: blur(6px);
-        opacity: 1;
-        left: 20px;
-        bottom: 100px; /* Ajusta la posición vertical según sea necesario */
+      position: fixed;
+      background: #1e1e1e;
+      color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      padding: 10px 14px;
+      display: flex;
+      align-items: center;
+      width: 280px;
+      z-index: 9999;
+      border: 1px solid #333;
+      backdrop-filter: blur(6px);
+      opacity: 1;
+      left: 20px;
+      bottom: 100px;
     }
 
     .xpo-img-wrap img {
-        width: 42px;
-        height: 42px;
-        border-radius: 6px;
-        object-fit: cover;
-        border: 1px solid #444;
+      width: 42px;
+      height: 42px;
+      border-radius: 6px;
+      object-fit: cover;
+      border: 1px solid #444;
     }
 
     .xpo-col {
-        margin-left: 12px;
+      margin-left: 12px;
     }
 
     .xpo-notification-name {
-        font-weight: bold;
-        font-size: 0.9em;
-        color: #fff;
+      font-weight: bold;
+      font-size: 0.9em;
     }
 
     .xpo-notification-product {
-        font-size: 0.85em;
-        color: #22d3ee;
+      font-size: 0.85em;
+      color: #22d3ee;
     }
 
     .xpo-location {
-        font-size: 0.75em;
-        color: #cbd5e1;
+      font-size: 0.75em;
+      color: #cbd5e1;
     }
 
     .xpo-location::before {
-        content: "📍";
-        margin-right: 4px;
+      content: "📍";
+      margin-right: 4px;
     }
-
   </style>
 </head>
 
 <body>
   <!-- Contenedor principal -->
   <div class="container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-
-      <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
-      <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
-
-      <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botónContactar">
-          CHATEAR EN WHATSAPP
-      </a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
+    <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
+    <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
+    <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
+      CHATEAR EN WHATSAPP
+    </a>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-      🎁 ¡Solicítalo ahora por WhatsApp!
+    🎁 ¡Solicítalo ahora por WhatsApp!
   </div>
 
   <!-- Pie de página -->
   <footer>
-      MEGA BONUS todos los derechos reservados.
+    MEGA BONUS todos los derechos reservados.
   </footer>
 
   <!-- Notificaciones -->
+  <!-- Notificación de Norma Nuñez -->
   <div class="xpo-notification-wrap">
     <div class="xpo-img-wrap">
-      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Usuario">
+      <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="Norma Nuñez">
     </div>
+    <div class="xpo-col">
+      <div class="xpo-notification-name">Norma Nuñez</div>
+      <div class="xpo-notification-product">Producto X</div>
+      <div class="xpo-location">hace 3 minutos</div>
+    </div>
+  </div>
 
+  <!-- Notificación de Silvana Caceres -->
+  <div class="xpo-notification-wrap">
+    <div class="xpo-img-wrap">
+      <img src="https://randomuser.me/api/portraits/women/2
 ::contentReference[oaicite:0]{index=0}
  
