--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
     <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
     <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      CHATEAR EN WHATSAPP
+      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
     </a>
   </div>
 
@@ -181,15 +181,6 @@
       <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="Norma Nuñez">
     </div>
     <div class="xpo-col">
-      <div class="xpo-notification-name">Norma Nuñez</div>
-      <div class="xpo-notification-product">Producto X</div>
-      <div class="xpo-location">hace 3 minutos</div>
-    </div>
-  </div>
-
-  <!-- Notificación de Silvana Caceres -->
-  <div class="xpo-notification-wrap">
-    <div class="xpo-img-wrap">
-      <img src="https://randomuser.me/api/portraits/women/2
-::contentReference[oaicite:0]{index=0}
+     
+::contentReference[oaicite:6]{index=6}
  
