--- a/index.html
+++ b/index.html
@@ -174,13 +174,17 @@
     MEGA BONUS todos los derechos reservados.
   </footer>
 
-  <!-- Notificaciones -->
   <!-- Notificación de Norma Nuñez -->
-  <div class="xpo-notification-wrap">
-    <div class="xpo-img-wrap">
-      <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="Norma Nuñez">
-    </div>
-    <div class="xpo-col">
+<div class="xpo-notification-wrap">
+  <div class="xpo-img-wrap">
+    <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="Norma Nuñez">
+  </div>
+  <div class="xpo-col">
+    <div class="xpo-notification-name">Norma Nuñez</div>
+    <div class="xpo-notification-product">¡Gracias por cumplir!</div>
+    <div class="xpo-location">Hace 5 minutos - Buenos Aires</div>
+  </div>
+</div>
      
 ::contentReference[oaicite:6]{index=6}
  
