--- a/index.html
+++ b/index.html
@@ -157,21 +157,21 @@
   <!-- Contenedor principal -->
   <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-    <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
-    <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
+    <h1>🎰SUPER BONUS ACTIVO🎰</h1>
+    <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
     <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
+      🍀 CLICK ACA PARA IR A WHATSAPP🍀
     </a>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-    🎁 ¡Solicítalo ahora por WhatsApp!
+    🎁 ¡Pedi tu usuario por WhatsApp!
   </div>
 
   <!-- Pie de página -->
   <footer>
-    MEGA BONUS todos los derechos reservados.
+    Mega Bonus todos los derechos reservados.
   </footer>
 
  <!-- Notificación de Norma Nuñez -->
@@ -186,5 +186,16 @@
   </div>
 </div>
      
+	  <!-- Notificación de Silvana Rodriguez -->
+<div class="xpo-notification-wrap">
+  <div class="xpo-img-wrap">
+ 
+  </div>
+  <div class="xpo-col">
+    <div class="xpo-notification-name">Silvana Rodriguez</div>
+    <div class="xpo-notification-product">Son unas genias, buena atencion🥰</div>
+    <div class="xpo-location">Hace 8 minutos - Corrientes </div>
+  </div>
+</div>
 ::contentReference[oaicite:6]{index=6}
  
