--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page - BONUS DE BIENVENIDA</title>
+  <title>Bono de Bienvenida</title>
 
-  <!-- Meta Pixel Code -->
+  <!-- Fuente Montserrat desde Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Código del Meta Pixel -->
   <script>
     !function(f,b,e,v,n,t,s) {
       if(f.fbq) return; n=f.fbq=function() {
@@ -16,36 +19,29 @@
       n.queue=[]; t=b.createElement(e); t.async=!0;
       t.src=v; s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)
-    }(window, document, 'script', 'https://connect.facebook.net/es_LA/fbevents.js');
-    fbq('init', '635168062745954'); // Reemplaza con tu ID de Pixel
-    fbq('track', 'PageView');
+    }(window,document,'script','https://connect.facebook.net/es_LA/fbevents.js');
+    fbq('init', '2372161916484346'); // Reemplaza con tu ID de Pixel
+    fbq('track', 'PageView'); // Evento de vista de página
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=635168062745954&ev=PageView&noscript=1" />
+      src="https://www.facebook.com/tr?id=2372161916484346&ev=PageView&noscript=1" />
   </noscript>
-  <!-- End Meta Pixel Code -->
+  <!-- Fin del Meta Pixel -->
 
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
     body {
+      font-family: 'Segoe UI', sans-serif;
       background-color: #ffffff;
       color: #111b21;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       flex-direction: column;
     }
-
     .container {
       text-align: center;
       padding: 20px;
@@ -55,7 +51,6 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
-
     h1 {
       font-family: 'Montserrat', sans-serif;
       font-weight: bold;
@@ -63,17 +58,14 @@
       margin-bottom: 20px;
       letter-spacing: -2px;
     }
-
     p {
       font-size: 1.2em;
       margin-bottom: 20px;
     }
-
     .whatsapp-logo {
       width: 50px;
       margin-bottom: 20px;
     }
-
     .cta-button {
       background-color: #25d366;
       color: white;
@@ -88,11 +80,9 @@
       margin-top: 20px;
       transition: background-color 0.3s ease;
     }
-
     .cta-button:hover {
       background-color: #128c7e;
     }
-
     footer {
       text-align: center;
       font-size: 13px;
@@ -100,7 +90,6 @@
       margin-top: 60px;
       padding-bottom: 80px;
     }
-
     .xpo-notification-wrap {
       position: fixed;
       background: #1e1e1e;
@@ -118,7 +107,6 @@
       left: 20px;
       bottom: 100px;
     }
-
     .xpo-img-wrap img {
       width: 42px;
       height: 42px;
@@ -126,26 +114,21 @@
       object-fit: cover;
       border: 1px solid #444;
     }
-
     .xpo-col {
       margin-left: 12px;
     }
-
     .xpo-notification-name {
       font-weight: bold;
       font-size: 0.9em;
     }
-
     .xpo-notification-product {
       font-size: 0.85em;
       color: #22d3ee;
     }
-
     .xpo-location {
       font-size: 0.75em;
       color: #cbd5e1;
     }
-
     .xpo-location::before {
       content: "📍";
       margin-right: 4px;
@@ -157,45 +140,23 @@
   <!-- Contenedor principal -->
   <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-    <h1>🎰SUPER BONUS ACTIVO🎰</h1>
-    <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
+    <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
+    <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
     <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      🍀 CLICK ACA PARA IR A WHATSAPP🍀
+      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
     </a>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-    🎁 ¡Pedi tu usuario por WhatsApp!
+    🎁 ¡Solicítalo ahora por WhatsApp!
   </div>
 
   <!-- Pie de página -->
   <footer>
-    Mega Bonus todos los derechos reservados.
+    MEGA BONUS todos los derechos reservados.
   </footer>
 
- <!-- Notificación de Norma Nuñez -->
-<div class="xpo-notification-wrap">
-  <div class="xpo-img-wrap">
-    <img src="https://randomuser.me/api/portraits/women/1.jpg" alt="Norma Nuñez">
-  </div>
-  <div class="xpo-col">
-    <div class="xpo-notification-name">Norma Nuñez</div>
-    <div class="xpo-notification-product">¡Gracias por cumplir!</div>
-    <div class="xpo-location">Hace 5 minutos - Buenos Aires</div>
-  </div>
-</div>
-     
-	  <!-- Notificación de Silvana Rodriguez -->
-<div class="xpo-notification-wrap">
-  <div class="xpo-img-wrap">
- 
-  </div>
-  <div class="xpo-col">
-    <div class="xpo-notification-name">Silvana Rodriguez</div>
-    <div class="xpo-notification-product">Son unas genias, buena atencion🥰</div>
-    <div class="xpo-location">Hace 8 minutos - Corrientes </div>
-  </div>
-</div>
+
 ::contentReference[oaicite:6]{index=6}
  
