--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
   <!-- Contenedor principal -->
   <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-    <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
-    <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
+    <h1>🎰SUPER BONUS ACTIVO🎰</h1>
+    <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
     <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
+      🍀CLICK ACA PARA IR A WHATSAPP🍀
     </a>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-    🎁 ¡Solicítalo ahora por WhatsApp!
+    Tu usuario GRATIS y al instante🙌
   </div>
 
   <!-- Pie de página -->
@@ -158,5 +158,4 @@
   </footer>
 
 
-::contentReference[oaicite:6]{index=6}
  
