--- a/index.html
+++ b/index.html
@@ -90,49 +90,6 @@
       margin-top: 60px;
       padding-bottom: 80px;
     }
-    .xpo-notification-wrap {
-      position: fixed;
-      background: #1e1e1e;
-      color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      padding: 10px 14px;
-      display: flex;
-      align-items: center;
-      width: 280px;
-      z-index: 9999;
-      border: 1px solid #333;
-      backdrop-filter: blur(6px);
-      opacity: 1;
-      left: 20px;
-      bottom: 100px;
-    }
-    .xpo-img-wrap img {
-      width: 42px;
-      height: 42px;
-      border-radius: 6px;
-      object-fit: cover;
-      border: 1px solid #444;
-    }
-    .xpo-col {
-      margin-left: 12px;
-    }
-    .xpo-notification-name {
-      font-weight: bold;
-      font-size: 0.9em;
-    }
-    .xpo-notification-product {
-      font-size: 0.85em;
-      color: #22d3ee;
-    }
-    .xpo-location {
-      font-size: 0.75em;
-      color: #cbd5e1;
-    }
-    .xpo-location::before {
-      content: "📍";
-      margin-right: 4px;
-    }
   </style>
 </head>
 
@@ -140,16 +97,16 @@
   <!-- Contenedor principal -->
   <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
-    <h1>🎰SUPER BONUS ACTIVO🎰</h1>
-    <p>🏆 Encontra los mejores Sl0ts y atención 24 horas 🏆</p>
+    <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
+    <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
     <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      🍀CLICK ACA PARA IR A WHATSAPP🍀
+      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
     </a>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-    Tu usuario GRATIS y al instante🙌
+    🎁 ¡Solicítalo ahora por WhatsApp!
   </div>
 
   <!-- Pie de página -->
@@ -157,5 +114,13 @@
     MEGA BONUS todos los derechos reservados.
   </footer>
 
+  <!-- Código JavaScript para registrar el evento "Contact" -->
+  <script type="text/javascript">
+    document.getElementById('botonContactar').addEventListener('click', function() {
+      fbq('track', 'Contact');  // Evento "Contact" de Pixel
+      window.location.href = "https://wa.link/megabonus";  // Redirección a Whalink
+    }, false);
+  </script>
+</body>
 
- 
+</html>
