--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       n.queue=[]; t=b.createElement(e); t.async=!0;
       t.src=v; s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)
-    }(window,document,'script','https://connect.facebook.net/es_LA/fbevents.js');
-    fbq('init', '2372161916484346'); // Reemplaza con tu ID de Pixel
+    }(window, document,'script','https://connect.facebook.net/es_LA/fbevents.js');
+    fbq('init', '1190591479116428'); // Reemplaza con tu ID de Pixel
     fbq('track', 'PageView'); // Evento de vista de página
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=2372161916484346&ev=PageView&noscript=1" />
+      src="https://www.facebook.com/tr?id=1190591479116428&ev=PageView&noscript=1" />
   </noscript>
   <!-- Fin del Meta Pixel -->
 
@@ -99,14 +99,14 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" class="whatsapp-logo">
     <h1>🎰 SUPER BONUS ACTIVO 🎰</h1>
     <p>🏆 Encuentra los mejores Sl0ts y atención 24 horas 🏆</p>
-    <a href="https://wa.link/megabonus" class="cta-button" target="_blank" id="botonContactar">
-      🍀 TE ESPERA UN MEGABONUS, ¡HÁBLANOS! 🍀
-    </a>
+    <button id="botonContactar" class="cta-button">
+      🍀CLICK ACA PARA IR A WHATSAPP🍀
+    </button>
   </div>
 
   <!-- Barra fija -->
   <div class="bono-bar" style="position: fixed; bottom: 0; left: 0; width: 100%; background-color: #16a34a; color: white; text-align: center; padding: 10px; font-weight: bold;">
-    🎁 ¡Solicítalo ahora por WhatsApp!
+  🎁Tu usuario GRATIS y al instante🎁
   </div>
 
   <!-- Pie de página -->
@@ -114,11 +114,11 @@
     MEGA BONUS todos los derechos reservados.
   </footer>
 
-  <!-- Código JavaScript para registrar el evento "Contact" -->
+  <!-- Código JavaScript para registrar el evento 'Contact' y redirigir a WhatsApp -->
   <script type="text/javascript">
     document.getElementById('botonContactar').addEventListener('click', function() {
-      fbq('track', 'Contact');  // Evento "Contact" de Pixel
-      window.location.href = "https://wa.link/megabonus";  // Redirección a Whalink
+      fbq('track', 'Contact');  // Registra el evento 'Contact' en el Meta Pixel
+      window.location.href = "https://wa.link/megabonus";  // Redirige al enlace de WhatsApp
     }, false);
   </script>
 </body>
