--- a/index.html
+++ b/index.html
@@ -180,6 +180,6 @@
 
     <!-- Pie de página -->
     <footer>
-        ©2025 Joker Online todos los derechos reservados.
+        ©2025 MegaBonus todos los derechos reservados.
     </footer>
     <!-- Script para
